<resources>
    <string name="app_name">Mostocks</string>
    <string name="search_hint">Find company or symbol</string>
    <string name="stocks">Stocks</string>
    <string name="favorites">Favorites</string>
    <string name="retry">Retry</string>
    <string name="timed_out">Timed out waiting for a response from the server.</string>
    <string name="loading_error">Loading error!</string>
    <string name="chart">Chart</string>
    <string name="summary">Summary</string>
    <string name="news">News</string>
    <string name="forecasts">Forecasts</string>
    <string name="no_network">No network connection!</string>
    <string name="turn_on_network">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="technical_analysis">Technical analysis</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="neutral">Neutral</string>
    <string name="need_to_buy">Buy</string>
    <string name="need_to_sell">Sell</string>
    <string name="need_to_hold">Hold</string>
    <string name="no_favorites">You have not favorite symbols.</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_or_remove_favorite">Add or remove favorite symbol</string>
    <string name="news_image">News image</string>
    <string name="network_error">Network error</string>
    <string name="no_network_message">You are not connected to the internet.</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="exit">Exit</string>
    <string name="thirty_placeholder">30</string>
    <string name="hour_placeholder">H</string>
    <string name="day_placeholder">D</string>
    <string name="week_placeholder">W</string>
    <string name="month_placeholder">M</string>
    <string name="recommendations">Recommendations</string>
    <string name="indicators">Indicators</string>
    <string name="financial_indicators">Financial indicators</string>
    <string name="market_cap">Market Cap</string>
    <string name="comp_val">Company value</string>
    <string name="cost_estimate">Cost estimate</string>
    <string name="pe">P/E</string>
    <string name="sp_per_p">Share price / profit</string>
    <string name="ps">P/S</string>
    <string name="sp_per_pr">Share price / proceeds</string>
    <string name="dil_eps">Diluted EPS</string>
    <string name="dil_eps_per_share">Diluted earnings per share</string>
    <string name="eps_growth">EPS growth</string>
    <string name="avg_5_y">Avg. growth over 5 years</string>
    <string name="rev_grwth">Revenue growth</string>
    <string name="avg_growth_5y">Avg. growth over 5 years</string>
    <string name="profitability">Profitability</string>
    <string name="roe">ROE</string>
    <string name="roa">ROA</string>
    <string name="roi">ROI</string>
    <string name="return_on_equity">Return on equity</string>
    <string name="return_on_assets">Return on assets</string>
    <string name="return_on_investment">Return on investment</string>
    <string name="de">DE</string>
    <string name="debt_per_equity">Debt / Equity</string>
    <string name="net_profit_margin">Net profit margin</string>
    <string name="profit_in_perc_of_revenue">Profit in % of revenue</string>
    <string name="dividends">Dividends</string>
    <string name="payout_ratio">Payout ratio</string>
    <string name="profit_dv_perc">Profit dividend %</string>
    <string name="avg_div_income">Average div. income</string>
    <string name="div_income_in_5y">in 5 years</string>
    <string name="div_income_annual">annual</string>
    <string name="trade_indicators">Trade indicators</string>
    <string name="high_52w">52w high</string>
    <string name="max_in_52w">Maximum in 52 weeks</string>
    <string name="min_in_52w">Minimum in 52 weeks</string>
    <string name="low_52w">52w low</string>
    <string name="stocks_volatility">Stocks volatility to the market</string>
    <string name="beta">Beta</string>
    <string name="recommendation">Recommendation</string>
    <string name="strong_sell">Strong sell</string>
    <string name="strong_buy">Strong buy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="recommendations_by_month">Recommendations\nby month</string>
    <string name="return_button">Return button</string>
    <string name="company_logo">Company logo</string>
    <string name="change_the_chart_view">Change the chart view</string>
    <string name="buy_signals">Buy signals:</string>
    <string name="sell_signals">Sell signals:</string>
    <string name="hold_signals">Hold signals:</string>
    <string name="strong_buy_signals">Strong buy signals:</string>
    <string name="strong_sell_signals">Strong sell signals:</string>
</resources>