<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technical_analysis"
                    android:textColor="@color/textAccentColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_date_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_signal_tech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:drawablePadding="5dp"
                android:text="@string/need_to_hold"
                android:textColor="@color/holdIndicatorColor"
                android:textSize="14sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_signal" />

            <ProgressBar
                android:id="@+id/pb_tech"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center" />

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation"
                    android:textColor="@color/textAccentColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_date_rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_signal_rec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:drawablePadding="5dp"
                android:text="@string/need_to_hold"
                android:textColor="@color/holdIndicatorColor"
                android:textSize="14sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_signal" />

            <ProgressBar
                android:id="@+id/progress_bar_rec"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center" />

        </FrameLayout>

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="15dp" />

    </androidx.cardview.widget.CardView>
</LinearLayout>